--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 	<p id="second"></p>
 
 
+	<div class="clock">
+		<div class="clock-face">
+			<div class="hand hour-hand"></div>
+			<div class="hand min-hand"></div>
+			<div class="hand sec-hand"></div>
+		</div>
+	</div>
+
 	<script src="main.js"></script>
 </body>
 
