--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-
-	<p id="first"></p>
-	<p id="second"></p>
-
+	<div class="text">
+		<p id="first"></p>
+		<p id="second"></p>
+	</div>
 
 	<div class="clock">
 		<div class="clock-face">
